updated api to server query
